# menu

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md
.github/workflows/: rust.yml
examples/: noline.rs  simple.rs
src/: lib.rs  menu_manager.rs
