[package]
name = "menu"
version = "0.4.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
description = "A simple #[no_std] command line interface."
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/rust-embedded-community/menu"
readme = "README.md"

[dependencies]


[features]
default = ["echo"]
echo = []

[dev-dependencies]
pancurses = "0.16"
