[package]
name = "menu"
version = "0.6.1"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
description = "A simple #[no_std] command line interface."
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/rust-embedded-community/menu"
readme = "README.md"

[dependencies]
embedded-io = "0.6.1"
noline = { version = "0.5.0", optional = true }
rustversion = "1.0.17"

[features]
default = ["echo"]
echo = []

[dev-dependencies]
noline = { version = "0.5.0", features = ["std"] }
pancurses = "0.16"
termion = "4.0.2"
menu = {path = ".", features = ["noline"]}
